# Bubble_Reconstruct

./: .gitignore  LICENSE  Plan.md
.claude/: CLAUDE.md
.claude/skills/debug-workflow/: SKILL.md
.claude/skills/rockfish-workflow/: SKILL.md
.claude/skills/test-workflow/: SKILL.md
report/: reconstruction_report_20260722.md  reconstruction_report_20260723.md
visual_hull/: IMPLEMENTATION_PLAN.md  README.md  environment.yml  pyproject.toml  scipy_terminal_issue.md
visual_hull/scripts/: benchmark_spherical_harmonic_degree_scaling.py  benchmark_surface_quality.py  compare_improved_frame0.py  compare_reference_frame0.py  compare_smoothed_surface_frame0.py  compare_spherical_harmonic_frame0.py  compare_surface_quality_frame0.py  diagnose_voxel_mismatch.py  export_frame0.py  reconstruct_frames_parallel.py  reconstruct_tiff_data.py  smoke_test.py  strict_compare_frame0.py  sweep_spherical_harmonic_frame0.py  temporal_smooth_sh.py  validate_synthetic_spheres.py  visualize_compare_frame.py  visualize_frame.py  visualize_raw_html.py  visualize_sh_bubbles.py  visualize_smoothed_html.py  visualize_spherical_harmonic_compare_frame.py
visual_hull/src/visual_hull/: __init__.py  camera.py  hull.py  io.py  models.py  properties.py  reconstruction.py  refinement.py  silhouette_metrics.py  surface_utils.py  test_runs.py  visualization.py  voxel_grid.py  writers.py
visual_hull/src/visual_hull/improved/: __init__.py  hull.py  reconstruction.py  refinement.py  surface.py
visual_hull/src/visual_hull/improved/spherical_harmonics/: __init__.py  surface.py
